--- a/react-advanced/package.json
+++ b/react-advanced/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "framer-motion": "^11.11.10",
     "react": "^18.3.1",
