--- a/react-advanced/package.json
+++ b/react-advanced/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
