--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^9.14.0",
     "express": "^4.18.2",
     "json-server": "^1.0.0-beta.3"
   }
