--- a/server/supabase-render/.env
+++ b/server/supabase-render/.env
@@ -1,2 +1,11 @@
-PORT=
-DB=
+PORT=5000
+NODE_ENV=development
+SALT_ROUND=5
+SECRET_CODE=bebas
+
+DB_USERNAME=postgres
+DB_PASSWORD=admin
+DB_NAME=supabase_render
+DB_NAME_TEST=supabase_render_test
+DB_NAME_PROD=supabase_render_production
+DB_HOST=localhost
