--- a/server/supabase-render/.env
+++ b/server/supabase-render/.env
@@ -8,4 +8,4 @@ DB_PASSWORD=admin
 DB_NAME=supabase_render
 DB_NAME_TEST=supabase_render_test
 DB_NAME_PROD=supabase_render_production
-DB_HOST=localhost
+DB_HOST=127.0.0.1
